src/test/block_remove_semicolon.stderr
error: mismatched types
  --> src/test/block_remove_semicolon.sq:7:18
   |
7  |       let x: i32 = {
   |  __________________^
8  | |
9  | |         foo(); //~ error: mismatched types, remove semicolon
10 | |     };
   | |_____^ expected `i32`, found `()`

