src/test/block_remove_semicolon.sq
fn foo() -> i32 {
    10
}


fn main() {
    let x: i32 = {
        
        foo(); //~ error: mismatched types, remove semicolon
    };
}
